welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:6: error: not found: value t
	if (t<x)
            ^maxValue:6: error: type mismatch;
 found   : Unit
 required: Int
	if (t<x)
        ^